# dumbrecords

./: .gitignore  dumbrecords.cabal  package.yaml
nix/: sources.json
src/: HList.hs  Main.hs  Record.hs  Row.hs
src/HList/: Classes.hs  Types.hs
src/Record/: Classes.hs  Types.hs
