cabal-version:       >=1.10

name:                dumbrecords
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  -- other-modules:
  -- other-extensions:
  extensions:            GADTs
                       , KindSignatures
                       , DataKinds
                       , PolyKinds
                       , RankNTypes
                       , TypeApplications
                       , OverloadedLabels
                       , FlexibleInstances
                       , FlexibleContexts
                       , MultiParamTypeClasses
                       , TypeOperators
                       , AllowAmbiguousTypes
                       , TypeFamilies
                       , TypeFamilyDependencies
                       , ScopedTypeVariables
                       , UndecidableInstances
                       , RebindableSyntax
                       , ImplicitPrelude
  exposed-modules:     Record, HList, Row, Main
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
